# ai-stack

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.roo/rules/: 01-global.md
litellm-proxy/: config.yaml
open_webui_tools/: gcal.py
scripts/: get_refresh_token.py
